--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>HTML Project with iframes</h1>
     <div>
         <h2>Local Content</h2>
-        <iframe src="./local.HTML" frameborder="1"></iframe>
+        <iframe src="local.html" frameborder="1"></iframe>
     </div>
 
     <div>
